--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
 .App {
-  text-align: center;
-}
+  height: 100vh;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  text-align: center;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.app-header {
+  background-color: #f0f0f0;
+  z-index: 1000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chat-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  flex-grow: 1;
+
+  background-color: #f0f0f0;
+}
+
+.messages-container {
+  padding: 2rem;
+  flex-grow: 1;
+}
+
+.message {
+  margin-bottom: 3rem;
+  display: flex;
+  align-items: flex-start;
+  position: relative;
+}
+.message.sent {
+  flex-flow: row-reverse;
+}
+
+.message .sender-name {
+  position: absolute;
+  top: -1.5rem;
+  padding: 0 6.5rem;
+
+  color: #8b8b8b;
+}
+
+.message img {
+  width: 4rem;
+
+  border-radius: 50%;
+  box-shadow: -5px -5px 10px #ffffff, 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.message p {
+  margin: 0 2rem;
+  padding: 0.25rem 1rem;
+  max-width: 70%;
+
+  background-color: #f0f0f0;
+  border-radius: 1.2rem;
+  box-shadow: -5px -5px 10px #ffffff, 5px 5px 10px rgba(0, 0, 0, 0.2);
+
+  text-align: left;
+  font-size: 1.2rem;
+  line-height: 1.25em;
+}
+
+form {
+  padding: 2rem;
+  display: flex;
+  flex-flow: row;
+}
+
+form input {
+  padding: 1rem;
+  flex-grow: 1;
+
+  background-color: #f0f0f0;
+  border: 0;
+
+  font-size: 2rem;
+}
+
+form button {
+  padding: 1rem;
+  margin-left: 2rem;
+  font-size: 3rem;
+
+  background-color: #f0f0f0;
+  border: 0;
+  border-radius: 50%;
+  box-shadow: -5px -5px 10px #ffffff, 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
